# opencv_lab

./: .gitignore
opencv_lab/: CMakeLists.txt  main.cpp
opencv_lab/src/: centralwidget.cpp  centralwidget.h  generaltoolbar.cpp  generaltoolbar.h  main.cpp  mainwindow.cpp  mainwindow.h  opencv2qt.cpp  opencv2qt.h
